--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This project is for an Android application to interact with the Red Hat Customer Portal
+This project is for an Android application which interacts with the Red Hat Customer Portal
