--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,6 +25,9 @@
 	<string name="caseView.top.owner">Owner</string>
 	<string name="caseView.top.severity">Severtiy</string>
 
+	<string name="created">Created:</string>
+	<string name="updated">Updated:</string>
+
 	<string name="notification_updated_subject">Case Updated</string>
 	<string name="notification_updated_body">Case %1$s Updated</string>
 </resources>
